@@ -1,3 +1,4 @@
-Apache (2 and up) with PHP extension (+imap if you us the email importer)
-PHP (7 and up) with MySQL extension -> mysqli; curl enabled
+Apache (2.4 and up) with PHP extension enabled
+PHP (7 and up) with MySQL extension -> mysqli; curl enabled; (+imap +ssl if you us the email importer)
 MySQL database 5.6.x and up
+- DB user rights has to include create, alter a view
