@@ -9,3 +9,9 @@ Call the following URL to trigger the authentication:
 http(s)://your.domain.tld/path/to/insipid/index.php?m=auth
 
 If successful you can now manage your items. Edit buttons are visible now.
+
+HowToAdd a new link:
+
+There is no special "add a new link" option. Just paste the link into the search bar.
+If the link is already in your database the edit option will be shown.
+If not the add field will be shown and the possibility to safe the new link.
